--- a/src/app/core/components/header-menu/header-menu.component.html
+++ b/src/app/core/components/header-menu/header-menu.component.html
@@ -1,15 +1,15 @@
 @if (visible) {
   <div class="dropdown-menu" #modalBody>
-    <div class="profile-info">
+    <div class="profile-info" *ngIf="userProfile$ | async as userProfile">
       <img
         src="assets/icons/account/account-logo.svg"
         alt="Profile Picture"
         class="profile-logo"
       />
       <div class="profile-info__name-coins">
-<span>{{ userProfile?.first_name }} {{ userProfile?.last_name }}</span>
+        <span>{{ userProfile.first_name }} {{ userProfile.last_name }}</span>
         <div class="coins">
-          <span>1ng</span>
+          <span>{{ userProfile.coins }}</span>
           <svg-icon src="assets/icons/coins.svg"></svg-icon>
         </div>
       </div>
