--- a/src/app/shared/components/benefits-cards/benefits-cards.component.html
+++ b/src/app/shared/components/benefits-cards/benefits-cards.component.html
@@ -199,7 +199,47 @@
       }
     </div>
   }
+} @else if (topBenefits) {
+  <div class="cards">
+    @for (item of topBenefits; track item) {
+      @for (card of item.benefits; track card) {
+        <div class="card-item">
+          <img src="{{url}}{{ card.photo }}" alt=""/>
+          <div class="card-item-info">
+            <div class="card-item-info__title" [innerHTML]="card.name"></div>
+            <div class="card-item-info__company">
+              <svg-icon src="{{ card.companyLogo }}"></svg-icon>
+              <div
+                class="card-item-info__company__title"
+                [innerHTML]="card.company"
+              ></div>
+            </div>
+          </div>
+          @if (!deadLine) {
+            <div class="coins-button">
+              <div class="coins">
+                <app-coins [coins]="card.cost"></app-coins>
+              </div>
+
+              <div class="button">
+                <app-primary-button
+                  theme="dark"
+                  styling="standard"
+                  [label]="'Купить'"
+                  type="routerLink"
+                  (click)="openModal(card)"
+                />
+              </div>
+            </div>
+          } @else if (deadLine) {
+            <app-dead-line date="{{ card.expired_date }}"></app-dead-line>
+          }
+        </div>
+      }
+    }
+  </div>
 }
+
 <modal [(visible)]="modalVisible" height="666px" width="634px">
   @if (currentCard) {
     <div class="modal">
