--- a/src/app/layout/current-benefits/current-benefits.component.html
+++ b/src/app/layout/current-benefits/current-benefits.component.html
@@ -1,19 +1,19 @@
 <div class="main-page">
   <div class="categories">
     <button
-      (click)="toggleCategory(category)"
-      *ngFor="let category of categorylist"
+      (click)="toggleCategory(category.id)"
+      *ngFor="let category of categories"
       [class.active]="isCategorySelected(category)"
     >
-      {{ category }}
+      {{ category.name }}
     </button>
   </div>
+
   <div class="most-popular">
     <div class="most-popular__cards">
       <app-benefits-cards
-        [currentCards]="userProfile"
+        [cards]="filteredBenefits"
         [deadLine]="true"
-        [isLinkCard]="true"
       ></app-benefits-cards>
     </div>
   </div>
