--- a/src/app/layout/catalog/catalog.component.scss
+++ b/src/app/layout/catalog/catalog.component.scss
@@ -14,9 +14,9 @@
   .categories {
     @include flexbox;
     @include align-items(center);
-    @include justify-content(space-between);
+    @include gap(3px);
     border-radius: 8px;
-    box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
+    box-shadow: 0 5px 16px rgba(93, 93, 93, 0.06);
     padding: 8px;
     background-color: $primary-white;
 
