changed path to modal

--- a/src/app/shared/components/benefits-cards/benefits-cards.component.html
+++ b/src/app/shared/components/benefits-cards/benefits-cards.component.html
@@ -252,7 +252,7 @@
       <div class="modal__main-info">
         <div class="heading">
           <div class="heading__image">
-            <img src="{{ currentCard.photo }}" alt=""/>
+            <img src="{{url}}{{ currentCard.photo }}" alt=""/>
           </div>
           <div class="heading__info">
             <div class="heading__info__description">
