--- a/src/app/shared/components/benefits-cards/benefits-cards.component.scss
+++ b/src/app/shared/components/benefits-cards/benefits-cards.component.scss
@@ -11,10 +11,11 @@
     @include flex-direction(column);
     @include gap(16px);
     border-radius: 16px;
-    box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
+    box-shadow: 0 5px 16px rgba(93, 93, 93, 0.06);
     padding: 16px;
     background-color: $primary-white;
     width: 29.33%;
+    min-height: 300px;
 
     img {
       width: 100%;
@@ -51,6 +52,7 @@
       @include flexbox;
       @include align-items(center);
       @include justify-content(space-between);
+      margin-top: auto;
     }
   }
 }
@@ -66,7 +68,7 @@
     @include flexbox;
     @include gap(16px);
     border-radius: 16px;
-    box-shadow: 0px 5px 16px rgba(93, 93, 93, 0.06);
+    box-shadow: 0 5px 16px rgba(93, 93, 93, 0.06);
     padding: 16px;
     background-color: $primary-white;
     width: 100%;
