added image for detail card

--- a/src/app/layout/wallet/wallet.component.html
+++ b/src/app/layout/wallet/wallet.component.html
@@ -17,5 +17,6 @@
   <app-benefits-cards
     [currentCards]="userProfile"
     [isColumnCard]="false"
+    type="catalog"
   ></app-benefits-cards>
 </div>
