--- a/src/app/layout/current-benefits/current-benefits.component.html
+++ b/src/app/layout/current-benefits/current-benefits.component.html
@@ -14,6 +14,7 @@
       <app-benefits-cards
         [cards]="filteredBenefits"
         [deadLine]="true"
+        type="catalog"
       ></app-benefits-cards>
     </div>
   </div>
