--- a/src/app/shared/components/benefits-cards/benefits-cards.component.html
+++ b/src/app/shared/components/benefits-cards/benefits-cards.component.html
@@ -2,7 +2,7 @@
   @if (isColumnCard && !isLinkCard) {
     <div class="cards">
       @for (card of cards; track card) {
-        <div class="card-item">
+        <div class="card-item" (click)="openModal(card)">
           <img src="{{ card.photo }}" alt=""/>
           <div class="card-item-info">
             <div class="card-item-info__title" [innerHTML]="card.name"></div>
@@ -100,7 +100,7 @@
     <div class="cards">
       @for (item of currentCards.orders; track item) {
         @for (card of item.benefits; track card) {
-          <div class="card-item">
+          <div class="card-item" (click)="openModal(card)">
             <img src="{{ card.photo }}" alt=""/>
             <div class="card-item-info">
               <div class="card-item-info__title" [innerHTML]="card.name"></div>
@@ -203,7 +203,7 @@
   <div class="cards">
     @for (item of topBenefits; track item) {
       @for (card of item.benefits; track card) {
-        <div class="card-item">
+        <div class="card-item" (click)="openModal(card)">
           <img src="{{url}}{{ card.photo }}" alt=""/>
           <div class="card-item-info">
             <div class="card-item-info__title" [innerHTML]="card.name"></div>
