--- a/src/app/layout/account/account.component.scss
+++ b/src/app/layout/account/account.component.scss
@@ -55,7 +55,9 @@ input {
 
           img {
             width: 140px;
-            height: 140px
+            height: 140px;
+            border-radius: 1000px;
+            object-fit: cover;
           }
 
           .buttons {
