added avatar to header

--- a/src/app/core/components/header-menu/header-menu.component.html
+++ b/src/app/core/components/header-menu/header-menu.component.html
@@ -2,7 +2,7 @@
   <div class="dropdown-menu" #modalBody>
     <div class="profile-info" *ngIf="userProfile$ | async as userProfile">
       <img
-        src="assets/icons/account/account-logo.svg"
+        src="{{userProfile.avatar}}"
         alt="Profile Picture"
         class="profile-logo"
       />
