--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -17,7 +17,7 @@
     </div>
     <div (click)="openModal()" class="account-image">
       <a>
-        <svg-icon src="assets/icons/account/account-logo.svg"/>
+        <img alt="" src="{{userProfile.avatar}}">
       </a>
 
     </div>
