--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -20,6 +20,12 @@
 
         a {
           сursor: pointer;
+
+          img {
+            width: 48px;
+            height: 46px;
+            border-radius: 1000px;
+          }
         }
       }
     }
