--- a/src/app/layout/account/account.component.html
+++ b/src/app/layout/account/account.component.html
@@ -10,10 +10,19 @@
       <div class="photo">
         <div class="photo__title">Фотография</div>
         <div class="photo__active">
-          <img [src]="profileForm.get('avatar')?.value" alt="Avatar" class="avatar"/>
+          <img [src]="profileForm.get('avatar')?.value" alt="" class="avatar"/>
           <div class="buttons">
-            <label class="button" for="avatar-upload">Изменить аватар</label>
-            <input (change)="onFileSelected($event)" id="avatar-upload" style="display: none" type="file"/>
+            <div class="input-button">
+              <label class="button" for="avatar-upload">Загрузить фото</label>
+              <input (change)="onFileSelected($event)" id="avatar-upload" style="display: none" type="file"/>
+            </div>
+            <app-primary-button
+              (click)="removeAvatar()"
+              [label]="'Удалить аватар'"
+              styling="standard"
+              theme="light"
+              type="button"
+            />
           </div>
         </div>
       </div>
@@ -88,3 +97,5 @@
     </div>
   </div>
 </div>
+<p-toast [breakpoints]="{'920px': {width: '100%', right: '0', left: '0'}}"></p-toast>
+
