--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -1,3 +1,5 @@
+<p-toast position="top-right"></p-toast>
+
 <form (ngSubmit)="onSubmit()" [formGroup]="authForm">
   <div class="input">
     <app-input
@@ -23,11 +25,7 @@
     theme="dark"
     type="submit"
   />
-  <div *ngIf="errorMessage" class="error-message">
-    {{ errorMessage }}
-  </div>
-
   <div *ngIf="isLoading" class="loading-spinner">
-    Loading...
+    Загрузка...
   </div>
 </form>
