changed for forms

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -14,21 +14,27 @@
 
     <ul>
       <li>
-        <a routerLink="/main" routerLinkActive="active">
+        <a routerLink="/dashboard" routerLinkActive="active">
           <svg-icon src="/assets/icons/tabs/home.svg"></svg-icon>
-          <span class="menu-text">Главная</span>
+          <span class="menu-text">Dashboard</span>
         </a>
       </li>
       <li>
-        <a routerLink="/current-benefits" routerLinkActive="active">
+        <a routerLink="/activity" routerLinkActive="active">
           <svg-icon src="/assets/icons/tabs/current-benefits.svg"></svg-icon>
-          <span class="menu-text">Действующие льготы</span>
+          <span class="menu-text">Активность</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/staff" routerLinkActive="active">
+          <svg-icon src="/assets/icons/tabs/person.svg"></svg-icon>
+          <span class="menu-text">Сотрудники</span>
         </a>
       </li>
       <li>
         <a routerLink="/catalog" routerLinkActive="active">
           <svg-icon src="/assets/icons/tabs/catalog.svg"></svg-icon>
-          <span class="menu-text">Каталог льгот</span>
+          <span class="menu-text">Льготы</span>
         </a>
       </li>
       <li>
