--- a/src/app/layout/catalog/catalog.component.html
+++ b/src/app/layout/catalog/catalog.component.html
@@ -1,18 +1,11 @@
 <div class="main-page">
-  <div
-    [ngStyle]="{
-      background: 'url(assets/images/main/Banner-blue.jpg) no-repeat',
-      'background-size': '100% 100%'
-    }"
-    class="banner"
-  >
-    <div class="banner-content">
-      <span
-      >Найдите идеальные бонусы <br/>
-        для вашего образа жизни!</span
-      >
-    </div>
-  </div>
+  <app-primary-button
+    (onClick)="openModal()"
+    [label]="'Добавить льготу'"
+    styling="standard"
+    theme="green"
+    type="button"
+  ></app-primary-button>
 
   <div class="categories">
     @for (category of categories; track category) {
@@ -34,3 +27,80 @@
     </div>
   </div>
 </div>
+
+<modal [(visible)]="isVisible">
+  <div class="create-modal">
+    <div class="create-modal__title">Добавление льготы</div>
+    <form [formGroup]="benefitForm">
+      <div class="flex-row">
+        <div class="form-group">
+          <label for="name">Название:</label>
+          <input formControlName="name" id="name" type="text" />
+        </div>
+        <div class="form-group">
+          <label for="sub_name">Подзаголовок:</label>
+          <input formControlName="sub_name" id="sub_name" type="text" />
+        </div>
+      </div>
+      <div class="flex-row">
+        <div class="form-group">
+          <label for="description">Описание:</label>
+          <input formControlName="description" id="description" type="text" />
+        </div>
+        <div class="form-group">
+          <label for="company">Компания:</label>
+          <input formControlName="company" id="company" type="text" />
+        </div>
+      </div>
+      <div class="flex-row">
+        <div class="form-group">
+          <label for="expired_date">Дата истечения:</label>
+          <input formControlName="expired_date" id="expired_date" type="date" />
+        </div>
+        <div class="form-group">
+          <label for="cost">Стоимость:</label>
+          <input formControlName="cost" id="cost" type="number" />
+        </div>
+      </div>
+      <div class="form-group">
+        <select formControlName="category">
+          <option *ngFor="let category of categories" [value]="category.id">
+            {{ category.name }}
+          </option>
+        </select>
+      </div>
+
+      <div class="photo">
+        <div class="photo__title">Фотография</div>
+        <div class="photo__active">
+          <img [src]="benefitForm.get('photo')?.value" alt="" class="avatar" />
+          <div class="buttons">
+            <div class="input-button">
+              <label class="button" for="avatar-upload">Загрузить фото</label>
+              <input
+                (change)="onFileSelected($event)"
+                id="avatar-upload"
+                style="display: none"
+                type="file"
+              />
+            </div>
+            <app-primary-button
+              (click)="removePhoto()"
+              [label]="'Удалить аватар'"
+              styling="standard"
+              theme="light"
+              type="button"
+            />
+          </div>
+        </div>
+      </div>
+      <app-primary-button
+        (onClick)="addBenefit()"
+        [label]="'Добавить льготу'"
+        styling="standard"
+        theme="dark"
+        type="button"
+      ></app-primary-button>
+    </form>
+  </div>
+</modal>
