--- a/src/app/shared/components/buttons/primary-button/primary-button.component.scss
+++ b/src/app/shared/components/buttons/primary-button/primary-button.component.scss
@@ -2,6 +2,9 @@
 
 @import "./themes/dark";
 @import "./themes/light";
+@import "./themes/green";
+@import "./themes/red";
+
 
 :host::ng-deep {
   display: inline-block;
