added orders page

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -20,7 +20,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/activity" routerLinkActive="active">
+        <a routerLink="/orders" routerLinkActive="active">
           <svg-icon src="/assets/icons/tabs/current-benefits.svg"></svg-icon>
           <span class="menu-text">Активность</span>
         </a>
