--- a/src/app/shared/components/benefits-cards/benefits-cards.component.html
+++ b/src/app/shared/components/benefits-cards/benefits-cards.component.html
@@ -2,8 +2,8 @@
   @if (isColumnCard && !isLinkCard) {
     <div class="cards">
       @for (card of cards; track card) {
-        <div class="card-item" (click)="openModal(card)">
-          <img src="{{ card.photo }}" alt=""/>
+        <div class="card-item">
+          <img src="{{ card.photo }}" (click)="openModal(card)" alt="" />
           <div class="card-item-info">
             <div class="card-item-info__title" [innerHTML]="card.name"></div>
             <div class="card-item-info__company">
@@ -23,7 +23,22 @@
           } @else if (deadLine) {
             <app-dead-line date="{{ card.expired_date }}"></app-dead-line>
           }
-
+          <div class="buttons">
+            <app-primary-button
+              (click)="onDeleteBenefit(card.id)"
+              [label]="'Удалить'"
+              styling="standard"
+              theme="red"
+              type="button"
+            ></app-primary-button>
+            <app-primary-button
+              (click)="onEditBenefit(card)"
+              [label]="'Редактировать'"
+              styling="standard"
+              theme="dark"
+              type="button"
+            ></app-primary-button>
+          </div>
         </div>
       }
     </div>
@@ -31,7 +46,7 @@
     <div class="rowCards">
       @for (card of cards; track card) {
         <div class="card-item" (click)="openModal(card)">
-          <img src="{{ card.photo }}" alt=""/>
+          <img src="{{ card.photo }}" alt="" />
           <div class="card-item-info">
             <div class="card-item-info__title" [innerHTML]="card.name"></div>
             <div class="card-item-info__company">
@@ -52,7 +67,7 @@
     <div class="cards">
       @for (card of cards; track card) {
         <div class="card-item" (click)="openModal(card)">
-          <img src="{{ card.photo }}" alt=""/>
+          <img src="{{ card.photo }}" alt="" />
           <div class="card-item-info">
             <div class="card-item-info__title" [innerHTML]="card.name"></div>
             <div class="card-item-info__company">
@@ -92,7 +107,7 @@
       @for (item of currentCards.orders; track item) {
         @for (card of item.benefits; track card) {
           <div class="card-item" (click)="openModal(card)">
-            <img src="{{ card.photo }}" alt=""/>
+            <img src="{{ card.photo }}" alt="" />
             <div class="card-item-info">
               <div class="card-item-info__title" [innerHTML]="card.name"></div>
               <div class="card-item-info__company">
@@ -131,7 +146,7 @@
       @for (item of currentCards.orders; track item) {
         @for (card of item.benefits; track card) {
           <div class="card-item" (click)="openModal(card)">
-            <img src="{{ card.photo }}" alt=""/>
+            <img src="{{ card.photo }}" alt="" />
             <div class="card-item-info">
               <div class="card-item-info__title" [innerHTML]="card.name"></div>
               <div class="card-item-info__company">
@@ -150,12 +165,11 @@
       }
     </div>
   } @else if (isColumnCard && isLinkCard) {
-
     <div class="cards">
       @for (item of currentCards.orders; track item) {
         @for (card of item.benefits; track card) {
           <div class="card-item" (click)="openModal(card)">
-            <img src="{{ card.photo }}" alt=""/>
+            <img src="{{ card.photo }}" alt="" />
             <div class="card-item-info">
               <div class="card-item-info__title" [innerHTML]="card.name"></div>
               <div class="card-item-info__company">
@@ -171,8 +185,6 @@
                 <div class="coins">
                   <app-coins [coins]="card.cost"></app-coins>
                 </div>
-
-
               </div>
             } @else if (deadLine) {
               <app-dead-line date="{{ card.expired_date }}"></app-dead-line>
@@ -187,7 +199,7 @@
     @for (item of topBenefits; track item) {
       @for (card of item.benefits; track card) {
         <div class="card-item" (click)="openModal(card)">
-          <img src="{{url}}{{ card.photo }}" alt=""/>
+          <img src="{{ url }}{{ card.photo }}" alt="" />
           <div class="card-item-info">
             <div class="card-item-info__title" [innerHTML]="card.name"></div>
             <div class="card-item-info__company">
@@ -236,9 +248,9 @@
         <div class="heading">
           <div class="heading__image">
             @if (type === "main") {
-              <img src="{{url}}{{ currentCard.photo }}" alt=""/>
+              <img src="{{ url }}{{ currentCard.photo }}" alt="" />
             } @else if (type === "catalog") {
-              <img src="{{ currentCard.photo }}" alt=""/>
+              <img src="{{ currentCard.photo }}" alt="" />
             }
           </div>
           <div class="heading__info">
@@ -269,7 +281,6 @@
             ></div>
           }
         </div>
-
       </div>
     </div>
   }
@@ -277,7 +288,7 @@
 
 <modal [(visible)]="purchaseSuccessModalVisible" height="464px" width="634px">
   <div class="purchase-success-modal">
-    <svg-icon [src]="'assets/images/purchase/success.svg'"/>
+    <svg-icon [src]="'assets/images/purchase/success.svg'" />
     <div class="title-message">
       <div class="title">Покупка совершена!</div>
       <div class="message">
@@ -306,12 +317,10 @@
 
 <modal [(visible)]="purchaseFailedModalVisible" height="464px" width="634px">
   <div class="purchase-success-modal">
-    <svg-icon [src]="'assets/images/purchase/failed.svg'"/>
+    <svg-icon [src]="'assets/images/purchase/failed.svg'" />
     <div class="title-message">
       <div class="title">Упс... Вам не хватает коинов</div>
-      <div class="message">
-        Попробуйте выбрать другую льготу
-      </div>
+      <div class="message">Попробуйте выбрать другую льготу</div>
     </div>
 
     <div class="buttons">
