--- a/src/app/shared/components/orders-cards/orders-cards.component.scss
+++ b/src/app/shared/components/orders-cards/orders-cards.component.scss
@@ -45,7 +45,15 @@
 
     .company {
       @include heading_4;
+      width:200px
     }
+
+    .number{
+      width:150px
+
+    }
+
+
   }
 }
 
@@ -56,8 +64,25 @@
   padding: 24px;
   width: 100%;
 
+  .title{
+    @include heading_2;
+  }
+
   .orders-modal-container{
     width: 100%;
+    @include flexbox;
+    @include gap(6px);
+
+    ::ng-deep app-benefits-cards{
+      .cards{
+        width: 350px;
+        .card-item{
+          width: 100%;
+          height:370px
+
+        }
+      }
+    }
 
   }
 }
