--- a/src/app/shared/components/staff-cards/staff-cards.component.html
+++ b/src/app/shared/components/staff-cards/staff-cards.component.html
@@ -1,6 +1,6 @@
 @if(staffList){
   <div class="staff-container">
-    <div *ngFor="let item of staffList; trackBy: trackById">
+    <div class="staff-container__info" *ngFor="let item of staffList; trackBy: trackById">
       <div class="staff">
         <div class="account-info">
           <div class="img">
@@ -13,7 +13,7 @@
           </div>
           <div class="name-container">
             <div class="name" [innerHTML]="item.first_name"></div>
-            <div class="status" [innerHTML]="item.last_name"></div>
+            <div class="status" [innerHTML]="item.pk"></div>
           </div>
         </div>
         <div class="company"
@@ -27,7 +27,16 @@
         <div class="coins">
           <app-coins [coins]="item.coins"/>
         </div>
+
       </div>
+      <app-primary-button
+        (click)="onDeleteUser(item.pk)"
+        [label]="'Удалить'"
+        styling="standard"
+        theme="red"
+        type="button"
+      ></app-primary-button>
+
     </div>
 
 
