--- a/src/app/shared/components/staff-cards/staff-cards.component.scss
+++ b/src/app/shared/components/staff-cards/staff-cards.component.scss
@@ -1,52 +1,62 @@
 @import "../../../../assets/scss/properties";
 
-
-.staff-container{
+.staff-container {
   @include flexbox;
   @include flex-direction(column);
   @include gap(16px);
 
-  .staff{
+  &__info {
     @include flexbox;
-    @include gap(118px);
+    @include justify-content(space-between);
     @include align-items(center);
 
     padding: 16px;
     background-color: $primary-white;
     border-radius: 16px;
 
-    .account-info{
-      width: 340px;
+    .staff {
       @include flexbox;
+      @include gap(118px);
+      @include align-items(center);
 
-      .img{
-        padding-right: 16px;
-        border-right: 1px solid #D1D1D1;
-
-        img{
-          width: 48px;
-          height: 48px;
-          border-radius: 1000px;
-
-        }
-      }
-
-      .name-container{
+      .account-info {
+        width: 340px;
         @include flexbox;
-        @include flex-direction(column);
-        @include gap(6px);
 
-        padding-left: 16px;
+        .img {
+          padding-right: 16px;
+          border-right: 1px solid #d1d1d1;
 
-        .status{
-          @include small;
-          color: $neutral-500;
+          img {
+            width: 48px;
+            height: 48px;
+            border-radius: 1000px;
+          }
+        }
+
+        .name-container {
+          @include flexbox;
+          @include flex-direction(column);
+          @include gap(6px);
+
+          padding-left: 16px;
+
+          .status {
+            @include small;
+            color: $neutral-500;
+          }
         }
       }
-    }
 
-    .company{
-      @include heading_4;
+      .company {
+        @include heading_4;
+        width:200px
+      }
+
+      .number{
+        width:150px
+
+      }
 
     }
   }
